--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pytest = "^5.2"
 black = {version = "^19.10b0", allow-prereleases = true}
 isort = "^4.3"
 coverage = "^4.5"
+flake8 = "^3.7.9"
 
 "RPI.GPIO" = {version = "^0.7.0", optional=true}
 rpi_ws281x = {version = "^4.2", optional=true}
